# datasette-plugin-book-collection

./: .gitignore  README.md  pyproject.toml
datasette_plugin_book_collection/: __init__.py  ddl.py  utils.py
datasette_plugin_book_collection/static/: book_collection.css
datasette_plugin_book_collection/templates/: book-collection-add-new-book.html
datasette_plugin_book_collection/templates/pages/: booktest.html
tests/: test_plugin_book_collection.py
